vercre-issuer/src/snapshots/vercre_issuer__deferred__tests__state.snap
---
source: vercre-issuer/src/deferred.rs
assertion_line: 188
expression: state
---
expires_at: "[expires_at]"
credential_identifiers:
  - EmployeeID_JWT
subject_id: normal_user
current_step:
  token:
    access_token: tkn-ABCDEF
    c_nonce: "[c_nonce]"
    c_nonce_expires_at: "[c_nonce_expires_at]"
